samples/_failures_safe/1761074745_c1eccc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6047ba8.c: In function ‘main’:
./samples/SAFE/__tmp_a6047ba8.c:163:16: error: expected ‘)’ at end of input
  163 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_a6047ba8.c:163:5: error: expected declaration or statement at end of input
  163 |     if (len > 0
      |     ^~
